--- a/all/etc/sysctl.conf
+++ b/all/etc/sysctl.conf
@@ -59,10 +59,9 @@
 #net.ipv4.conf.all.log_martians = 1
 #
 
-vm.swappiness = 10
-vm.dirty_background_bytes = 0
-vm.dirty_bytes = 0
-vm.dirty_ratio = 20
-vm.dirty_background_ratio = 10
-vm.dirty_writeback_centisecs = 500
-fs.aio-max-nr = 8192
+#6.23.15 - Not needed anymore after increasing the priority of Xorg
+#vm.dirty_background_bytes = 20971520
+#vm.dirty_bytes = 104857600 
+#vm.dirty_ratio = 0
+#vm.dirty_background_ratio = 0
+#vm.dirty_writeback_centisecs = 3000
